feat: organización testing y otros retoques
